--- a/Practice/CSS/styleLP.css
+++ b/Practice/CSS/styleLP.css
@@ -48,9 +48,10 @@ background-color: rgb(231, 219, 230);
   .dropdown:hover .dropdown-content {
     display: block;}
 
-.Products{position:relative ; width: 1000px;
-           display: flex; justify-content: space-between;
-        align-items: center; flex-wrap: wrap;
+.Products{position:relative ; max-width: 1000px ; 
+    margin-left:300px;
+           display: flex; justify-content: center;
+         flex-wrap: wrap;
         
     }
 
@@ -61,6 +62,7 @@ background-color: rgb(231, 219, 230);
             margin: 10px;
             padding: 15px;
             display: flex;
+            
         }
 
 .Products .card .Product-images {max-width: 150px;
